[package]
name = "ydcv-rs"
description = "A rust version of YouDao Console Version"
repository = "https://github.com/farseerfc/ydcv-rs"
readme = "README.md"
license = "GPL-2.0"
version = "0.4.1"
authors = ["Jiachen Yang <farseerfc@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "^0.2"
structopt-derive = "^0.2"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
env_logger = "^0.6"
rustyline = "^3.0"
log = "^0.4"
lazy_static = "^1.2"
atty = "^0.2"
reqwest = "^0.9"

[target.'cfg(windows)'.dependencies]
winrt-notification =    {version = "^0.2", optional = true}
clipboard2 =            {version = "^0.1", optional = true}

[target.'cfg(unix)'.dependencies]
notify-rust =           {version = "^3.4", optional = true}
x11-clipboard =         {version = "^0.3", optional = true}

[features]
default = ["notify-rust", "x11-clipboard"]

windows = ["winrt-notification", "clipboard2"]

## Cargo.toml don't allow us to write this:
## https://github.com/rust-lang/cargo/issues/1197#issuecomment-268203727
# [target.'cfg(windows)'.features]
# default = ["winrt-notification", "clipboard2"]
