[package]
name = "ydcv-rs"
description = "A rust version of YouDao Console Version"
repository = "https://github.com/farseerfc/ydcv-rs"
readme = "README.md"
license = "GPL-2.0"
version = "0.4.5"
authors = ["Jiachen Yang <farseerfc@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "^0.3"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
env_logger = "^0.7"
rustyline = "^5.0"
log = "^0.4"
lazy_static = "^1.2"
atty = "^0.2"
reqwest = {version = "0.9", features=["socks"]}

[target.'cfg(windows)'.dependencies]
winrt-notification =    {version = "^0.2", optional = true}
clipboard2 =            {version = "^0.1", optional = true}

[target.'cfg(unix)'.dependencies]
notify-rust =           {version = "^3.4", optional = true}
x11-clipboard =         {version = "^0.5", optional = true}

[features]
default = [ "notify", "clipboard" ]
notify = ["notify-rust", "winrt-notification"]
clipboard = ["x11-clipboard", "clipboard2"]
