[package]
name = "ydcv-rs"
description = "A rust version of YouDao Console Version"
repository = "https://github.com/farseerfc/ydcv-rs"
readme = "README.md"
license = "GPL-2.0"
version = "0.6.0"
authors = ["Jiachen Yang <farseerfc@gmail.com>"]
edition = "2021"

[dependencies]
structopt = "^0.3"
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
env_logger = "^0.10"
rustyline = "^12.0"
log = "^0.4"
once_cell = "1.18"
atty = "^0.2"
htmlescape = "0.3"
reqwest = {version = "0.11", default-features = false, features = ["socks", "blocking"]}
rand = "0.8"
md-5 = "0.10"
scraper = "0.18"
copypasta = {version = "0.10", optional = true}

[target.'cfg(windows)'.dependencies]
winrt-notification =    {version = "^0.5", optional = true}

[target.'cfg(unix)'.dependencies]
notify-rust =           {version = "^4.3", optional = true}
x11-clipboard =         {version = "^0.8", optional = true}

[features]
default = [ "notify", "clipboard", "rusttls" ]
notify = ["notify-rust", "winrt-notification"]
clipboard = ["copypasta"]
rusttls = ["reqwest/rustls-tls"]

[profile.release]
lto = true
